add menu e cards

--- a/src/app/component/big-card/big-card.component.html
+++ b/src/app/component/big-card/big-card.component.html
@@ -1,11 +1,49 @@
 <div class="container__big-card">
   <div class="big-card__photo">
+    <img src="https://www.telesintese.com.br/wp-content/uploads/2023/04/Inteligencia-Artificial-IA-AI-freepik-2023.jpg"
+    alt=""
+    height="500px"
+    width="700px"
+    srcset="">
 
   </div>
   <div class="big-card__title">
+<h1><a href="https://www.aberje.com.br/coluna/inteligencia-artificial-generativa-inimiga-ou-aliada" target="_blank" >IA nossa nova aliada</a></h1>
 
   </div>
   <div class="big-card__description">
+    <p>
 
+A Inteligência Artificial (IA) tem o potencial de ser uma poderosa aliada em várias áreas da vida cotidiana, negócios e sociedade em geral. Aqui estão algumas maneiras pelas quais a IA pode ser uma aliada: <br>
+
+Automação de Tarefas Repetitivas: <br>
+A IA pode ser usada para automatizar tarefas rotineiras e repetitivas, permitindo que os seres humanos se concentrem em atividades mais criativas e estratégicas. Isso aumenta a eficiência e reduz o tempo dedicado a tarefas monótonas.<br>
+
+Assistência em Tomada de Decisões:<br>
+Sistemas de IA podem analisar grandes volumes de dados e fornecer insights valiosos para apoiar a tomada de decisões. Isso é particularmente útil em setores como finanças, saúde e negócios, onde a análise de dados é essencial.<br>
+
+Aprimoramento da Produtividade:<br>
+Chatbots e assistentes virtuais baseados em IA podem ajudar a responder a perguntas comuns, fornecer suporte ao cliente e realizar tarefas simples, liberando tempo para atividades mais complexas.<br>
+
+Personalização de Experiências:<br>
+A IA é usada para analisar dados sobre o comportamento do usuário e fornecer experiências personalizadas, como recomendações de produtos, conteúdo personalizado e sugestões relevantes.<br>
+
+Avanços na Saúde:<br>
+Em medicina, a IA pode ser usada para diagnósticos mais rápidos e precisos, análise de imagens médicas, pesquisa de medicamentos e tratamentos personalizados. Isso pode levar a melhores resultados para os pacientes.<br>
+
+Segurança e Prevenção:<br>
+Sistemas de IA são usados em segurança para detecção de ameaças, prevenção de fraudes e monitoramento de atividades suspeitas. Eles podem analisar padrões e identificar anomalias de maneira eficiente.<br>
+
+Aprendizado Personalizado:<br>
+Em educação, a IA pode fornecer plataformas de aprendizado personalizadas, adaptando-se ao ritmo e ao estilo de aprendizado de cada aluno, oferecendo assim uma experiência de ensino mais eficaz.<br>
+
+Inovação em Pesquisa:<br>
+A IA pode acelerar a pesquisa científica e a inovação, ajudando a analisar grandes conjuntos de dados, simular cenários complexos e identificar padrões que podem levar a descobertas significativas.<br>
+
+Acessibilidade:<br>
+A IA pode ser usada para criar tecnologias mais acessíveis, ajudando pessoas com deficiências a interagir com dispositivos e serviços de maneira mais eficaz.<br>
+
+Soluções para Desafios Globais:<br>
+A IA pode ser aplicada para enfrentar desafios globais, como mudanças climáticas, sustentabilidade, segurança alimentar e saúde pública, fornecendo insights e soluções inovadoras.</p>
   </div>
 </div>
