--- a/src/app/component/menu-bar/menu-bar.component.html
+++ b/src/app/component/menu-bar/menu-bar.component.html
@@ -1,1 +1,11 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+<ul>
+  <li><a href="https://www.linkedin.com/in/evanio-matias-987ba3249/" target="_blank">Linkedin</a></li>
+  <li><span>•</span></li>
+  <li><a href="https://github.com/EvanioTech" target="_blank">Github</a></li>
+  <li><span>•</span></li>
+  <li><a href="https://www.youtube.com/channel/UCWQ9fu4wme_gg66QMjQ4ksQ" target="_blank">Youtube</a></li>
+</ul>
+
+</div>
+
