changes in components

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,14 @@
-<app-menu-bar></app-menu-bar>
+<header>
+  <app-menu-bar></app-menu-bar>
+</header>
+
 <app-menu-title></app-menu-title>
 <div class="container__articles">
-  <div class="articles__main"><app-big-card></app-big-card></div>
+  <div class="articles__main">
+    <app-big-card linkSite="https://www.aberje.com.br/coluna/inteligencia-artificial-generativa-inimiga-ou-aliada" photoCover="https://www.telesintese.com.br/wp-content/uploads/2023/04/Inteligencia-Artificial-IA-AI-freepik-2023.jpg" cardTitle="IA nossa nova aliada!"></app-big-card></div>
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card linkSite="https://www.tecmundo.com.br/internet/230884-internet-coisas-entenda-funciona.htm" photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTxvCV-pChRjbaWiLYaktsrP3lgnkRAE3cG2A&usqp=CAU" cardTitle="IOT a famosa internet das coisas!"></app-small-card>
+    <app-small-card linkSite="https://tecnoblog.net/responde/machine-learning-ia-o-que-e/" photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7rosG8cI1Nn07-HLUO9Ytp4KMunOwPCmvHw&usqp=CAU" cardTitle="Machine learning"></app-small-card>
+    <app-small-card linkSite="https://www.redesagradosul.com.br/cultura-maker" photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTHGX06VXBnhghmehhmP8ssc2KEPgCIQDW1ng&usqp=CAU" cardTitle="Cultura maker"></app-small-card>
   </div>
 </div>
