--- a/src/app/component/menu-bar/menu-bar.component.css
+++ b/src/app/component/menu-bar/menu-bar.component.css
@@ -1,19 +1,20 @@
-.container__menu-bar{
-  margin-top: 15px;
-}
 
 .container__menu-bar > ul{
 display: flex;
 flex-direction: row;
 list-style: none;
 
+
 }
 
 .container__menu-bar > ul > li{
   margin-right: 20px;
-  
+
+
   }
   .container__menu-bar > ul > li > a{
     text-decoration: none;
+    color: blueviolet;
+    text-align: right;
     }
 
