--- a/src/app/component/menu-title/menu-title.component.css
+++ b/src/app/component/menu-title/menu-title.component.css
@@ -5,14 +5,14 @@
 
 .container__menu-title > h1{
   margin-top: 15px;
-  margin-bottom: 15px;
   font-size: 170px;
-  display:flex
+  display:flex;
 
 }
 h1{
   justify-content: center;
-  font-family:'Courier New', Courier, monospace
+  font-family:'Courier New', Courier, monospace;
+
 }
 
 .container__menu-title > hr{
